# AAVDroneSoftware

./: .gitignore  README.md
aav_ws/src/aav_bringup/: CMakeLists.txt
aav_ws/src/aav_bringup/aav_worlds/: aav_runway.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_Blank/: model.config  model.sdf
aav_ws/src/aav_bringup/launch/: aav_simulation_launch.py
aav_ws/src/aav_interfaces/: CMakeLists.txt
aav_ws/src/aav_software/: package.xml  setup.cfg  setup.py
aav_ws/src/aav_software/aav_software/: test_node.py
docker/: Dockerfile  ros_bashrc.sh
